防投毒执行接口优化